[metadata]
name = autohelperpkg
version = 1.0
author = Zhuoyuan_Li
long_description = file: Readme.md
url = https://github.com/user/repo
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =

[options.entry_points]
console_scripts =
    pyautohelper = autohelper.__main__:main
